--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -7,11 +7,99 @@
 
 
 
-    <ListView
-        android:id="@+id/FeedListView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/UserImageProfileView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:background="@drawable/ic_camera"
+        android:scaleType="centerCrop" />
 
-    </ListView>
+    <ProgressBar
+        android:id="@+id/progressbarProfile"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="43dp"
+        android:layout_alignTop="@+id/UserNameProfileView"
+        android:layout_toStartOf="@+id/UserImageProfileView"
+        android:gravity="center"
+        android:text="Username:"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/UserNameProfileView"
+        android:layout_width="273dp"
+        android:layout_height="43dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:text="@string/untitled" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="43dp"
+        android:layout_below="@+id/textView5"
+        android:layout_toStartOf="@+id/UserAgeProfileView"
+        android:gravity="center"
+        android:text="Age:"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/UserAgeProfileView"
+        android:layout_width="273dp"
+        android:layout_height="43dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView5"
+        android:ems="10"
+        android:text="@string/untitled" />
+
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="43dp"
+        android:layout_below="@+id/UserAgeProfileView"
+        android:layout_toStartOf="@+id/UserJobProfileView"
+        android:gravity="center"
+        android:text="Job:"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"/>
+
+
+    <TextView
+        android:id="@+id/UserJobProfileView"
+        android:layout_width="273dp"
+        android:layout_height="43dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/UserAgeProfileView"
+        android:ems="10"
+        android:text="@string/untitled" />
+
+    <Button
+        android:id="@+id/EditProfileBtn"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp"
+        android:background="@color/colorAccent"
+        android:text="Edit" />
 
 </RelativeLayout>
+
+
