--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -22,7 +22,7 @@
             android:textColor="@color/colorPrimary"
             android:text="Tap below to add an image"/>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/UserImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
