--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,58 +5,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.string.LogInActivity"
    android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryDark"
+    android:layout_gravity="center"
+    android:gravity="center">
 
-
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:background="@color/colorPrimaryDark">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textColor="@color/colorPrimary"
-            android:text="Welcome to String"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:text="String is your companion that helps you buy good products
-and also contribute to building your favourite brands"
-            android:textSize="15sp"
-            android:layout_marginTop="15dp"/>
-
-        <LinearLayout
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center" >
-
-            <Button
-                android:id="@+id/LearnMoreBtn"
-                android:layout_margin="10dp"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/button_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Learn More"/>
-
-            <Button
-                android:id="@+id/UserGuide"
-                android:layout_margin="10dp"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/button_style2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="User Guide"/>
-        </LinearLayout>
-    </LinearLayout>
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@mipmap/ic_launcher_round"
+        android:layout_marginBottom="5dp"/>
+</LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
