--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/navigation_feed"
-        android:icon="@drawable/ic_feed"
-        android:title="@string/title_feed" />
-
-    <item
-        android:id="@+id/navigation_saved"
-        android:icon="@drawable/ic_saved"
-        android:title="@string/title_saved" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_camera"
-        android:icon="@drawable/ic_camera"
-        android:title="@string/title_camera" />
+        android:title="@string/title_camera"
+        android:icon="@drawable/ic_purple_camera"/>
+
+
+    <item
+        android:id="@+id/navigation_feed"
+        android:title="@string/title_feed"
+        android:icon="@drawable/ic_feed"/>
+
+    <item
+        android:id="@+id/navigation_saved"
+        android:title="@string/title_saved"
+        android:icon="@drawable/ic_saved"/>
+
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search"
-        android:title="@string/title_search" />
+        android:title="@string/title_search"
+        android:icon="@drawable/ic_purple_search"/>
 
     <item
-        android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/title_profile" />
+        android:id="@+id/navigation_more"
+        android:title="More Information"
+        android:icon="@drawable/ic_more"/>
 
     <item
-        android:id="@+id/navigation_about"
-        android:icon="@drawable/ic_info"
-        android:title="@string/title_profile" />
+        android:id="@+id/navigation_logout"
+        android:title="Log Out"
+        android:icon="@drawable/string_logo"/>
+
+
 
 
 
