--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,29 +28,18 @@
         android:background="@drawable/circle_menu_background"/>
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/UserImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="13dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="10dp"
-        android:padding="20dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/ic_black_profile" />
 
 
 
-    <TextView
-        android:id="@+id/UserLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/view"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:text="Location"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15sp"
-        />
+
 
 
 
@@ -61,7 +50,7 @@
         android:layout_alignBottom="@+id/view2"
         android:layout_marginEnd="15dp"
         android:layout_toStartOf="@+id/view2"
-        android:src="@drawable/ic_red_following" />
+        android:src="@drawable/ic_following" />
 
     <TextView
         android:id="@+id/UserFollowing"
@@ -125,18 +114,18 @@ android:background="@color/colorPrimaryDark"
             android:layout_margin="5dp"
             android:layout_marginTop="10dp">
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="20sp"
         android:textColor="@color/colorPrimaryDark"
-        android:text="Email: " />
+        android:text="Location: " />
 
 
 
     <TextView
-        android:id="@+id/UserEmail"
+        android:id="@+id/UserLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimaryDark"
